# ng_mesh_cutting

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: pypi.yml
src/: __init__.py  ng_mesh_cutting.cpp
